@@ -1,11 +1,14 @@
-EBUILD descent2-data-1.0.ebuild 1803 RMD160 039356b6c9c322ecb2df456320ff31283a871909 SHA1 28e713e071348b58f29294038084eebaa521140a SHA256 06f20f644e22fe5bad464d97e0cf14263065aef00fc168c08e2620238186a956
-MD5 8cc0015372afdcc3691f700d9a4ef94e descent2-data-1.0.ebuild 1803
-RMD160 039356b6c9c322ecb2df456320ff31283a871909 descent2-data-1.0.ebuild 1803
-SHA256 06f20f644e22fe5bad464d97e0cf14263065aef00fc168c08e2620238186a956 descent2-data-1.0.ebuild 1803
-MISC ChangeLog 488 RMD160 9c72e0db6d5466929ba48e130005454589a04994 SHA1 5a82cb5114657afcbb2f30bd5e69aea32b2e7742 SHA256 c82583bb4029351f725cd052d80a0a15fe0107e485a68c10368e61688c5d83c1
-MD5 dd0148e4d5ac28a25b58c506bf8f6b04 ChangeLog 488
-RMD160 9c72e0db6d5466929ba48e130005454589a04994 ChangeLog 488
-SHA256 c82583bb4029351f725cd052d80a0a15fe0107e485a68c10368e61688c5d83c1 ChangeLog 488
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+EBUILD descent2-data-1.0.ebuild 2295 RMD160 4f4e0118ebec96859b99d088b0dbfcae7799cbc6 SHA1 c5e240baefea4a8c8e5843756c400f21f4855c1d SHA256 6c1cafcc094dc3f2e07ea7070b35a753ef1ca082dfdeb0f5ade28526444d7291
+MD5 c641a60c188278fb9e7f46cb4090ee31 descent2-data-1.0.ebuild 2295
+RMD160 4f4e0118ebec96859b99d088b0dbfcae7799cbc6 descent2-data-1.0.ebuild 2295
+SHA256 6c1cafcc094dc3f2e07ea7070b35a753ef1ca082dfdeb0f5ade28526444d7291 descent2-data-1.0.ebuild 2295
+MISC ChangeLog 697 RMD160 ba6d875f8913268ba57bd77478278b7afebaab91 SHA1 e6a924e1dd67b9e67517bcd1da46f651f30d7859 SHA256 ea973f2a776dff22452fe5d1219ede1f7fddb6ad3e42a7af877118c2aa557e89
+MD5 f27bbf537c8699c76fcbae110ddd7c9c ChangeLog 697
+RMD160 ba6d875f8913268ba57bd77478278b7afebaab91 ChangeLog 697
+SHA256 ea973f2a776dff22452fe5d1219ede1f7fddb6ad3e42a7af877118c2aa557e89 ChangeLog 697
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
@@ -13,3 +16,10 @@ SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-descent2-data-1.0 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-descent2-data-1.0 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-descent2-data-1.0 0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.2 (GNU/Linux)
+
+iD8DBQFF7t8rkT4lNIS36YERAlMwAJ9vPEKp2cLUzeINrDgY8nbq1b80dACeIzhY
+XvMFKdZq0GEd5BxVbzGKdBA=
+=BBx8
+-----END PGP SIGNATURE-----
