@@ -1,6 +1,11 @@
 # ChangeLog for games-action/descent2-data
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/descent2-data/ChangeLog,v 1.1 2007/01/09 21:28:10 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/descent2-data/ChangeLog,v 1.2 2007/03/07 15:49:57 wolf31o2 Exp $
+
+  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  descent2-data-1.0.ebuild:
+  Updated the ebuild with changes from Hendrik Iben <hiben@tzi.de> and Paul
+  Bredbury <brebs@sent.com>. Closing bug #168463.
 
 *descent2-data-1.0 (09 Jan 2007)
 
